<resources>
    <string name="app_name">Foodity</string>
    <string name="title_notes">Notes</string>
    <string name="title_social">Social</string>
    <string name="title_tools">Tools</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_blocked">Your account has been suspended</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="action_back">Back</string>
    <string name="register_failed">Failed to register</string>
    <string name="register_success">Registration successful</string>
    <string name="notebook_search_title">Search for entries</string>
    <string name="profilelog_followed"><b>%1$s</b> followed <b>%2$d</b>.</string>
    <string name="profilelog_unfollowed"><b>%1$s</b> unfollowed <b>%2$d</b>.</string>
    <string name="notelog_create"><![CDATA[<b>%1$s</b> created a new note: <b>%2$s</b>.]]></string>
    <string name="notelog_edit"><![CDATA[<b>%1$s</b> modified a note: <b>%2$s</b>.]]></string>
    <string name="notelog_delete"><![CDATA[<b>%1$s</b> deleted a note: <b>%2$s</b>.]]></string>
    <string name="notelog_like"><![CDATA[<b>%1$s</b> liked a note: <b>%2$s</b> from user <b>%3$s</b>.]]></string>
    <string name="notelog_commentself"><![CDATA[<b>%1$s</b> commented on a note: <b>%2$s</b>]]></string>
    <string name="categories_empty_info">There are no notes to display</string>
    <string name="dialog_category_title">New category</string>
    <string name="dialog_category_message">Create a new category</string>
    <string name="dialog_category_placeholder">Category Name</string>
    <string name="notes_empty_info">There are no notes in this category</string>
    <string name="dialog_note_title">New note</string>
    <string name="dialog_note_message">Create a note</string>
    <string name="dialog_note_placeholder">Note Name</string>
    <string name="user_description_placeholder">Description</string>
    <string name="user_lastname_placeholder">Last name</string>
    <string name="user_firstname_placeholder">First name</string>
    <string name="note_description_placeholder">Description</string>
    <string name="note_name_placeholder">Name</string>
    <string name="dialog_notelement_title">Create new element</string>
    <string name="dialog_noteelement_texttype">Text</string>
    <string name="dialog_noteelement_listtype">List</string>
    <string name="dialog_noteelement_imagetype">Image</string>
    <string name="imageelement_title_hint">Title</string>
    <string name="listelement_title_hint">Title</string>
    <string name="textelement_title_hint">Title</string>
    <string name="textelement_description_hint">Description</string>
    <string name="settings_title">Settings</string>
    <string name="settings_button_profile">Profile</string>
    <string name="settings_button_logout">Log Out</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_button_notes">View Notes</string>
    <string name="profile_button_follow">Follow</string>
    <string name="profile_button_unfollow">Unfollow</string>
    <string name="action_noteelement_delete">Delete</string>
    <string name="action_note_edit">Edit</string>
    <string name="action_note_delete">Delete</string>
    <string name="action_category_delete">Delete</string>
    <string name="tools_title">Tools</string>
    <string name="tools_button_timer">Timer</string>
    <string name="tools_button_unitconverter">Unit Converter</string>
    <string name="tools_button_massconverter">Mass Converter</string>
    <string name="weightconverter_title">Weight Converter</string>
    <string name="product_white_long_rice">White long rice</string>
    <string name="volumeunit_cups">Cups</string>
    <string name="volumeunit_mililiters">Mililiters</string>
    <string name="product_white_short_rice">White short rice</string>
    <string name="unitconverter_title">Unit Converter</string>
    <string name="unittype_weight">Weight</string>
    <string name="unittype_volume">Volume</string>
    <string name="unittype_temperature">Temperature</string>
    <string name="volumeunit_liters">Liters</string>
    <string name="weightunit_grams">Grams</string>
    <string name="weightunit_kilograms">Kilograms</string>
    <string name="weightunit_pounds">Pounds</string>
    <string name="tempunit_celsius">Celsius</string>
    <string name="tempunit_fahrenheit">Fahrenheit</string>
    <string name="timer_title">Timer</string>
    <string name="timepicker_hours">h</string>
    <string name="timepicker_minutes">m</string>
    <string name="timepicker_seconds">s</string>
    <string name="timer_button_set">Set</string>
    <string name="timer_title_placeholder">Title</string>
    <string name="dialog_deletenote_message">Are you sure you want to delete the note?</string>
    <string name="dialog_deletenote_title">Deleting the note</string>
    <string name="activity_empty_info">No activity to show</string>
    <string name="dialog_renamecategory_title">Renaming</string>
    <string name="dialog_renamecategory_message">Rename selected category</string>
    <string name="action_category_rename">Rename</string>
    <string name="action_note_duplicate">Duplicate</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_message_missinginternet">This app requires an active internet connection</string>
    <string name="dialog_title_register">Privacy policy</string>
    <string name="dialog_message_register">"By continuing, you consent to your username, email, password (optionally first name and last name) being processed for the purpose of the app working correctly. The app accesses account authentication info saved on your device and available under Settings>Accounts  "</string>
    <string name="product_sugar">Sugar</string>
    <string name="product_butter">Butter</string>
    <string name="product_almonds">Almonds</string>
    <string name="product_canola_oil">Canola oil</string>
    <string name="product_olive_oil">Olive oil</string>
    <string name="product_soy_sauce">Soy sauce</string>
    <string name="product_honey">Honey</string>
    <string name="product_maple_syrup">Maple syrup</string>
    <string name="weightunit_ounces">Ounces</string>
    <string name="volumeunit_us_teaspoon">Teaspoons (US)</string>
    <string name="volumeunit_us_tablespoon">Tablespoons (US)</string>
    <string name="volumeunit_us_fluidounce">Ounces (US)</string>
    <string name="volumeunit_uk_teaspoon">Teaspoons (UK)</string>
    <string name="volumeunit_uk_tablespoon">Tablespoons (UK)</string>
    <string name="volumeunit_uk_fluidounce">Ounces (UK)</string>
</resources>
