<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.AuthenticationActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="64dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/foodity_logo"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="36dp"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                     />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginHorizontal="36dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="42dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="4dp"
                    android:layout_marginHorizontal="36dp"
                    android:background="@drawable/bg_dgrey_rounded"
                    android:enabled="false"
                    android:paddingHorizontal="16dp"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/registerButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="42dp"
                    android:paddingHorizontal="16dp"
                    android:layout_marginHorizontal="36dp"
                    android:layout_gravity="start"
                    android:enabled="true"
                    android:onClick="moveToRegister"
                    android:text="@string/action_sign_up"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    android:visibility="gone"
                    app:layout_constraintVertical_bias="0.3" />

                </LinearLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>