<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.tools.ToolsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tools"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_settings"
        app:contentInsetStartWithNavigation="50dp"
        app:contentInsetEnd="50dp"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/tools_picture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_tools"
        app:layout_constraintBottom_toTopOf="@id/tools_button_massconverter"/>

    <Button
        android:id="@+id/tools_button_massconverter"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:drawableLeft="@drawable/ic_weight"
        android:text="@string/tools_button_massconverter"
        android:textAllCaps="false"
        android:layout_marginBottom="24dp"

        app:layout_constraintBottom_toTopOf="@id/tools_button_unitconverter"/>

    <Button
        android:id="@+id/tools_button_unitconverter"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:drawableLeft="@drawable/ic_calc"
        android:text="@string/tools_button_unitconverter"
        android:textAllCaps="false"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/tools_button_timer"/>

    <Button
        android:id="@+id/tools_button_timer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableLeft="@drawable/ic_timer"
        android:text="@string/tools_button_timer"
        android:textAllCaps="false"
        android:layout_marginBottom="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>