<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.settings.SettingsActivity"
                                                   android:background="@color/grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cardview_light_background"
        android:elevation="4dp"
        app:title="@string/settings_title"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/tools_picture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_profile"
        app:layout_constraintTop_toBottomOf="@id/settings_activity_toolbar"/>

    <Button
            android:id="@+id/button_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/cardview_light_background"
            android:drawableLeft="@drawable/ic_settings"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/settings_button_profile"
            android:textAllCaps="false"
            android:textSize="17sp"
            style="@style/GenericButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_logout"/>
    <Button
            android:id="@+id/button_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/cardview_light_background"
            android:drawableLeft="@drawable/exit"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/settings_button_logout"
            android:textAllCaps="false"
            android:textSize="17sp"
            style="@style/GenericButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>