<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:drawable/screen_background_dark_transparent"
        app:navigationIcon="@drawable/ic_back"/>

    <ImageView
            android:id="@+id/profile_background"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@android:drawable/screen_background_dark_transparent"
        android:layout_below="@id/toolbar_profile"
    />
    <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:src="@drawable/avatar"
            android:layout_below="@+id/profile_background"
            android:layout_marginTop="-64dp"
            android:layout_centerInParent="true"
    />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
    />

    <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textColor="#AEADAD"
    />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerInParent="true"
        android:textSize="16dp"
        android:textColor="#AEADAD"
        />

    <LinearLayout
            android:id="@+id/follower_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                android:id="@+id/followers_count"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/followers_title"
                    android:text="@string/profile_followers"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/following_count"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/following_title"
                    android:text="@string/profile_following"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_actions"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/follower_layout"
            android:layout_marginTop="26dp">
        <Button
                android:id="@+id/button_view_notes"
                android:layout_width="0dp"
                android:text="@string/profile_button_notes"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
        />
        <Button
                android:id="@+id/button_follow"
                android:layout_width="0dp"
                android:text="@string/profile_button_follow"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
        />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_actions"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
    />

</RelativeLayout>